--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>患者维护</title>
-    <link rel="stylesheet" type="text/css" href="../css/patient_flat.css" />
+    <link rel="stylesheet" type="text/css" href="../css/history.css" />
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
@@ -13,72 +13,79 @@
 
 <body>
     <div class="flex-wrap flex-vertical" id='pageone'>
-        <header id='header'>
-            <nav id="nav">
-                <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
-                    取消
-                </a>
-                <div id="middle">
-                    <span id="title">患者维护</span>
-                </div>
-                <a id="right" tapmode="" onclick="window.saveWin();" class="button button-raised button-royal">
-                    确认
-                </a>
-            </nav>
+        <header>
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
+                取消
+            </a>
+            <div id="middle">
+                <span id="title">患者信息维护</span>
+            </div>
+            <a id="right" tapmode="" onclick="window.saveWin();" class="button button-raised button-royal">
+                确认
+            </a>
         </header>
-        <div id="main">
-            <div class="field">
-                <div class="field_name">姓名:</div>
-                <div>
-                    <input type="text" id="name" />
+        <div id="main" class="flex-con">
+            <div class="groupName">基本信息</div>
+            <div class="group">
+                <div class="field">
+                    <div class="key">姓名:</div>
+                    <div class="value">
+                        <input type="text" id="name" />
+                    </div>
+                </div>
+                <div class="field" onclick="openPicker('gender');">
+                    <div class="key">性别:</div>
+                    <div class="value">
+                        <input type="text" id="gender" />
+                    </div>
+                </div>
+                <div class="field" onclick="openPicker('birthday');">
+                    <div class="key">出生日期:</div>
+                    <div class="value">
+                        <input type="text" id="birthday" />
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="key">年龄:</div>
+                    <div class="value">
+                        <input type="text" id="age" />
+                    </div>
+                </div>
+                <div class="field bottom">
+                    <div class="key">职业:</div>
+                    <div class="value">
+                        <input type="text" id="job" />
+                    </div>
                 </div>
             </div>
-            <div class="field" onclick="openPicker('gender');">
-                <div class="field_name">性别:</div>
-                <div>
-                    <input type="text" id="gender" />
+            <div class="groupName">编号</div>
+            <div class="group">
+                <div class="field">
+                    <div class="key">住院号:</div>
+                    <div class="value">
+                        <input type="text" id="admission_number" />
+                    </div>
+                </div>
+                <div class="field bottom">
+                    <div class="key">门诊号:</div>
+                    <div class="value">
+                        <input type="text" id="outpatient_number" />
+                    </div>
                 </div>
             </div>
-            <div class="field" onclick="openPicker('birthday');">
-                <div class="field_name">出生日期:</div>
-                <div>
-                    <input type="text" id="birthday"/>
+            <div class="groupName">联系方式</div>
+            <div class="group">
+                <div class="field">
+                    <div class="key">电话:</div>
+                    <div class="value">
+                        <input type="text" id="phone" />
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <div class="field_name">年龄:</div>
-                <div>
-                    <input type="text" id="age" />
-                </div>
-            </div>
-            <div class="field">
-                <div class="field_name">住院号:</div>
-                <div>
-                    <input type="text" id="admission_number" />
-                </div>
-            </div>
-            <div class="field">
-                <div class="field_name">门诊号:</div>
-                <div>
-                    <input type="text" id="outpatient_number" />
-                </div>
-            </div>
-            <div class="field">
-                <div class="field_name">电话:</div>
-                <div>
-                    <input type="text" id="phone" />
-                </div>
-            </div>
-            <div class="field">
-                <div class="field_name">地址:</div>
-                <div>
-                    <input type="text" id="address" />
-                </div>
-            </div>
-            <div class="field">
-                <div class="field_name">职业:</div>
-                <div>
-                    <input type="text" id="job" />
+                <div class="field textarea_field bottom">
+                    <div class="textarea_key">地址:</div>
+                    <div class="textarea_value">
+                        <textarea id="address" placeholder="请输入联系地址"></textarea>
+                    </div>
                 </div>
             </div>
         </div>
