--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -20,8 +20,8 @@
             <div id="middle">
                 <span id="title">患者信息维护</span>
             </div>
-            <a id="right" tapmode="" onclick="window.saveWin();" class="button button-raised button-royal">
-                确认
+            <a id="right" tapmode="" onclick="savePatient();" class="button button-raised button-royal">
+                保存
             </a>
         </header>
         <div id="main" class="flex-con">
@@ -97,39 +97,9 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    // $api.fixIos7Bar($api.dom('header'));
-
-    // 年龄自动计算，不允许输入
     $api.attr($api.byId('age'), 'readonly', 'true');
     $api.attr($api.byId('gender'), 'readonly', 'true');
     $api.attr($api.byId('birthday'), 'readonly', 'true');
-
-    window.closeWin = function(winName) {
-        // 取消修改时使用原值覆盖已修改的值
-        if (api.pageParam.data.length != 0) {
-            data = api.pageParam.data;
-            setPatient(data);
-        }
-        api.closeWin();
-    }
-
-    window.saveWin = function(winName) {
-        // 返回本页的患者信息
-        var name = $api.byId('name').value;
-        if (name == "" || name == null || name == undefined) {
-            alert("请输入患者姓名！");
-            return;
-        }
-        returnPatient();
-        api.closeWin();
-    }
-
-    // 从病历主页面传的值，赋给本页面
-    if (api.pageParam.data.length != 0) {
-        data = api.pageParam.data;
-        setPatient(data);
-    }
-
     api.addEventListener({
         name: 'returnGender'
     }, function(ret, err) {
@@ -143,47 +113,121 @@ apiready = function() {
     }, function(ret, err) {
         if (ret) {
             $api.byId('birthday').value = ret.value.birthday;
-            getAge();
+            $api.byId('age').value = getAge(ret.value.birthday);
+        }
+    });
+
+    history_id = api.pageParam.data.history_id;
+    patient_id = api.pageParam.data.id;
+
+    window.closeWin = function(winName) {
+        api.closeWin();
+    }
+
+    if (patient_id != undefined && patient_id != null && patient_id != "") {
+        getPatient();
+    }
+}
+
+function getPatient() {
+    showProgress();
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            model.findById({
+                class: "patient",
+                id: patient_id
+            }, function(ret, err) {
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        setPatient(ret);
+                    }
+                }
+                api.hideProgress();
+            });
         }
     });
 }
 
-/**
- * [returnPatient 通过event返回本页的数据]
- * @return {[type]} [description]
- */
-function returnPatient() {
-    api.sendEvent({
-        name: 'returnPatient',
-        extra: {
-            name: $api.byId('name').value,
-            gender: $api.byId('gender').value,
-            birthday: $api.byId('birthday').value,
-            age: $api.byId('age').value,
-            admission_number: $api.byId('admission_number').value,
-            outpatient_number: $api.byId('outpatient_number').value,
-            phone: $api.byId('phone').value,
-            address: $api.byId('address').value,
-            job: $api.byId('job').value
-        }
-    });
+function savePatient() {
+
+    showProgress();
+
+    if (patient_id != "") {
+        model.updateById({
+            class: 'patient',
+            id: patient_id,
+            value: {
+                vod: $api.byId('vod').value,
+                vos: $api.byId('vos').value,
+                corrected_vod: $api.byId('corrected_vod').value,
+                corrected_vos: $api.byId('corrected_vos').value,
+                tod: $api.byId('tod').value,
+                tos: $api.byId('tos').value,
+                outer_eye: $api.byId('outer_eye').value,
+                conjunctiva: $api.byId('conjunctiva').value,
+                cornea: $api.byId('cornea').value,
+                anterior_chamber: $api.byId('anterior_chamber').value,
+                lens: $api.byId('lens').value,
+                vitreous: $api.byId('vitreous').value,
+                eyeground: $api.byId('eyeground').value
+            }
+        }, function(ret, err) {
+            if (ret) {
+                patientModiEvent(ret.id)
+                api.closeWin();
+            } else {
+                alert("修改患者信息失败！" + JSON.stringify(err));
+            }
+            hideProgress();
+        });
+    } else {
+        model.insert({
+            class: 'patient',
+            value: {
+                vod: $api.byId('vod').value,
+                vos: $api.byId('vos').value,
+                corrected_vod: $api.byId('corrected_vod').value,
+                corrected_vos: $api.byId('corrected_vos').value,
+                tod: $api.byId('tod').value,
+                tos: $api.byId('tos').value,
+                outer_eye: $api.byId('outer_eye').value,
+                conjunctiva: $api.byId('conjunctiva').value,
+                cornea: $api.byId('cornea').value,
+                anterior_chamber: $api.byId('anterior_chamber').value,
+                lens: $api.byId('lens').value,
+                vitreous: $api.byId('vitreous').value,
+                eyeground: $api.byId('eyeground').value
+            }
+        }, function(ret, err) {
+            if (ret) {
+                patientAddEvent(ret.id);
+                // 如果history_id不为空，表示从viewPatient直接修改，而patient_id为空，则为新增，新增
+                // 之后还要将新生成的patient_id和history_id关联起来
+                if (history_id != "" && history_id != undefined && history_id != null) {
+                    model.updateById({
+                        class: 'caseHistory',
+                        id: history_id,
+                        value: {
+                            patient_pointer: ret.id
+                        }
+                    }, function(ret, err) {
+                        if (ret) {
+                            api.closeWin();
+                        } else {
+                            alert("新增患者信息失败！" + JSON.stringify(err));
+                        }
+                    });
+                }
+            } else {
+                alert("新增患者信息失败！" + JSON.stringify(err));
+            }
+            hideProgress();
+        });
+    }
 }
 
-/**
- * [getAge 计算年龄]
- * @return {[type]} [description]
- */
-function getAge() {
-    var r = $api.byId('birthday').value.match(/^(\d{1,4})(-|\/)(\d{1,2})\2(\d{1,2})$/);
-    if (r == null) {
-        return false;
-    }
-    var d = new Date(r[1], r[3] - 1, r[4]);
-    if (d.getFullYear() == r[1] && (d.getMonth() + 1) == r[3] && d.getDate() == r[4]) {
-        var Y = new Date().getFullYear();
-        $api.byId('age').value = (Y - r[1]);
-    }
-}
 </script>
 
 </html>
