--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -21,7 +21,7 @@
                 <span id="title">体检信息维护</span>
             </div>
             <a id="right" tapmode="" onclick="savePhysical();" class="button button-raised button-royal">
-                确认
+                保存
             </a>
         </header>
         <div id="main" class="flex-con">
@@ -163,13 +163,18 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    // $api.fixIos7Bar($api.dom('header'));
-
     // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vos'), 'readonly', 'true');
+    api.addEventListener({
+        name: 'returnVision'
+    }, function(ret, err) {
+        if (ret) {
+            $api.byId(ret.value.visionType).value = ret.value.vision;
+        }
+    });
 
     model = api.require('model');
     query = api.require('query');
@@ -207,16 +212,6 @@ apiready = function() {
     window.closeWin = function(winName) {
         api.closeWin();
     }
-
-    // 设置页面四个视力的值
-    api.addEventListener({
-        name: 'returnVision'
-    }, function(ret, err) {
-        if (ret) {
-            $api.byId(ret.value.visionType).value = ret.value.vision;
-        }
-    });
-
 }
 
 /**
@@ -248,13 +243,12 @@ function savePhysical() {
             }
         }, function(ret, err) {
             if (ret) {
-                returnPhysicalId(ret.id);
-                // refreshViewPhysical();
-                api.hideProgress();
+                physicalModiEvent(ret.id);
                 api.closeWin();
             } else {
                 alert("修改体检信息失败！" + JSON.stringify(err));
             }
+            hideProgress();
         });
     } else {
         model.insert({
@@ -276,8 +270,7 @@ function savePhysical() {
             }
         }, function(ret, err) {
             if (ret) {
-                returnPhysicalId(ret.id);
-                // refreshViewPhysical(ret.id);
+                physicalAddEvent(ret.id);
                 // 如果history_id不为空，表示从viewPhysical直接修改，而physical_id为空，则为新增，新增
                 // 之后还要将新生成的physical_id和history_id关联起来
                 if (history_id != "" && history_id != undefined && history_id != null) {
@@ -289,7 +282,6 @@ function savePhysical() {
                         }
                     }, function(ret, err) {
                         if (ret) {
-                            api.hideProgress();
                             api.closeWin();
                         } else {
                             alert("新增体检信息失败！" + JSON.stringify(err));
@@ -299,36 +291,11 @@ function savePhysical() {
             } else {
                 alert("新增体检信息失败！" + JSON.stringify(err));
             }
+            hideProgress();
         });
     }
 }
 
-/**
- * [returnPhysicalId description]
- * @param  {[type]} physical_id [description]
- * @return {[type]}             [description]
- */
-function returnPhysicalId(physical_id) {
-    api.sendEvent({
-        name: 'returnPhysicalId',
-        extra: {
-            physical_id: physical_id
-        }
-    });
-}
-
-/**
- * [refreshViewPhysical description]
- * @return {[type]} [description]
- */
-function refreshViewPhysical() {
-    api.sendEvent({
-        name: 'refreshViewPhysical',
-        extra: {
-            physical_id: physical_id
-        }
-    });
-}
 </script>
 
 </html>
